RESOLVED FIXED 257420
[GStreamer] SinksWorkarounds leak and version check fix
https://bugs.webkit.org/show_bug.cgi?id=257420
Summary [GStreamer] SinksWorkarounds leak and version check fix
Philippe Normand
Reported 2023-05-27 07:17:00 PDT
https://gitlab.freedesktop.org/gstreamer/gstreamer/-/merge_requests/3471 was merged in 1.23, so the version check should account for this. Also drive-by fix leak of gst_version_string().
Attachments
Philippe Normand
Comment 1 2023-05-27 07:19:09 PDT
EWS
Comment 2 2023-05-30 07:49:42 PDT
Committed 264672@main (8cb4f84c4e9b): <https://commits.webkit.org/264672@main> Reviewed commits have been landed. Closing PR #14425 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-05-30 07:50:17 PDT
Note You need to log in before you can comment on or make changes to this bug.