[GStreamer] SinksWorkarounds leak and version check fix https://bugs.webkit.org/show_bug.cgi?id=257420

Reviewed by Alicia Boya Garcia and Xabier Rodriguez-Calvar.

https://gitlab.freedesktop.org/gstreamer/gstreamer/-/merge_requests/3471 was merged in 1.23, so the
version check should account for this. Also drive-by fix leak of gst_version_string().

* Source/WebCore/platform/graphics/gstreamer/GStreamerSinksWorkarounds.cpp:
(WebCore::BaseSinkPositionFlushWorkaroundProbe::checkIsNeeded):

Canonical link: https://commits.webkit.org/264672@main