Source/WebCore/platform/graphics/gstreamer/GStreamerSinksWorkarounds.cpp
@@ -69,7 +69,7 @@ static WorkaroundMode getWorkAroundModeFromEnvironment(const char* environmentVa
 }
 
 // Workaround for: https://gitlab.freedesktop.org/gstreamer/gstreamer/-/merge_requests/3471 basesink: Support position queries after non-resetting flushes.
-// Fix will land in GStreamer 1.24.0.
+// Fix merged in 1.23, will ship in GStreamer 1.24.0.
 
 class BaseSinkPositionFlushWorkaroundProbe {
 public:
@@ -99,7 +99,10 @@ private:
 
     static bool checkIsNeeded()
     {
-        GST_DEBUG("BaseSinkPositionFlushWorkaroundProbe: running GStreamer %s, the bug fix is expected to land in 1.24.0.", gst_version_string());
+#ifndef GST_DISABLE_GST_DEBUG
+        GUniquePtr<char> versionString(gst_version_string());
+        GST_DEBUG("BaseSinkPositionFlushWorkaroundProbe: running GStreamer %s, the bug fix is was merged in 1.23 and is expected to ship in 1.24.0.", versionString.get());
+#endif
         WorkaroundMode mode = getWorkAroundModeFromEnvironment("WEBKIT_GST_WORKAROUND_BASE_SINK_POSITION_FLUSH", WEBKIT_GST_WORKAROUND_BASE_SINK_POSITION_FLUSH_DEFAULT_MODE);
         if (mode == WorkaroundMode::ForceEnable) {
             GST_DEBUG("BaseSinkPositionFlushWorkaroundProbe: forcing workaround to be enabled.");
@@ -110,7 +113,7 @@ private:
             return false;
         }
 
-        return !webkitGstCheckVersion(1, 24, 0);
+        return !webkitGstCheckVersion(1, 23, 0);
     }
 
     static void initializeIsNeeded()
